Make autocomplete dropdown display none when empty to prevent ghost div showing on IE11

--- a/sass/components/forms/_input-fields.scss
+++ b/sass/components/forms/_input-fields.scss
@@ -330,7 +330,6 @@ textarea {
 .autocomplete-content {
   margin-top: -1 * $input-margin-bottom;
   margin-bottom: $input-margin-bottom;
-  display: block;
   opacity: 1;
   position: static;
 
